# tauri-csharp

./: .gitignore  CLAUDE.md  LICENSE  NOTICE
docs/: 00-decision-log.md  01-architecture-overview.md  02-photino-improvements.md  03-wry-ffi-spec.md  04-csharp-pinvoke-bindings.md  05-roadmap.md
scripts/: build-wry-ffi.sh
src/TauriCSharp/: README.md  TauriCSharp.sln
src/TauriCSharp/TauriCSharp/: AssemblyInfo.cs  Dialogs.cs  GlobalShortcuts.cs  Notifications.cs  TauriApp.cs  TauriCSharp.csproj  TauriDialogEnums.cs  TauriDllImports.cs  TauriException.cs  TauriLog.cs  TauriMonitorStruct.cs  TauriNativeDelegates.cs  TauriNativeParameters.cs  TauriNetDelegates.cs  TauriWindow.Wry.cs  TauriWindow.WryCompat.cs  TauriWindow.cs
src/TauriCSharp/TauriCSharp.TestApp/: CLAUDE.md  Program.cs  TauriCSharp.TestApp.csproj
src/TauriCSharp/TauriCSharp.TestApp/wwwroot/: index.html
src/TauriCSharp/TauriCSharp/Handles/: WryAppHandle.cs  WryWindowHandle.cs
src/TauriCSharp/TauriCSharp/Interop/: WryCallbackRegistry.cs  WryDelegates.cs  WryInterop.cs  WryNativeString.cs  WryTypes.cs
src/TauriCSharp/TauriCSharp/Ipc/: TauriIpc.cs  TauriMessage.cs  TauriWindowIpcExtensions.cs
src/wry-ffi/: .gitignore  Cargo.toml  README.md
src/wry-ffi/src/: app.rs  bridge.rs  callbacks.rs  dialogs.rs  dispatch.rs  error.rs  events.rs  helpers.rs  lib.rs  menu.rs  notifications.rs  protocol.rs  shortcuts.rs  string.rs  tray.rs  types.rs  webview.rs  window.rs  window_ops.rs
src/wry-ffi/tests/: test_basic.c
