[package]
name = "wry-ffi"
version = "0.1.0"
edition = "2021"
description = "C FFI bindings for Wry WebView library"
license = "Apache-2.0 OR MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wry = { path = "../../vendor/wry", default-features = false, features = ["devtools", "transparent", "protocol", "drag-drop", "os-webview"] }
tao = { path = "../../vendor/tao", default-features = false }
once_cell = "1"
thiserror = "2.0"
http = "1.1"
log = "0.4"
env_logger = "0.11"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[target.'cfg(target_os = "linux")'.dependencies.tao]
path = "../../vendor/tao"
default-features = false
features = ["x11"]

[target.'cfg(target_os = "linux")'.dependencies.wry]
path = "../../vendor/wry"
default-features = false
features = ["devtools", "transparent", "protocol", "drag-drop", "os-webview", "x11"]

[profile.release]
lto = true
opt-level = "s"
