[package]
name = "wry-ffi"
version = "0.1.0"
edition = "2021"
description = "C FFI bindings for Wry WebView library"
license = "Apache-2.0 OR MIT"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
# Core windowing and webview (using local patched versions)
wry = { path = "../../vendor/wry", default-features = false, features = ["devtools", "transparent", "protocol", "drag-drop", "os-webview"] }
tao = { path = "../../vendor/tao", features = ["rwh_06"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# URL parsing
url = "2"

# File dialogs
rfd = "0.14"
tinyfiledialogs = "3.9"

# System tray (cross-platform, but menu features vary)
tray-icon = { version = "0.21", default-features = false, features = ["serde"] }

# Legacy dependencies (review for removal)
once_cell = "1"
thiserror = "2.0"
http = "1.1"
log = "0.4"
env_logger = "0.11"

[target.'cfg(target_os = "macos")'.dependencies]
muda = { version = "0.17", default-features = false, features = ["serde"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[target.'cfg(target_os = "linux")'.dependencies.tao]
path = "../../vendor/tao"
default-features = false
features = ["x11"]

[target.'cfg(target_os = "linux")'.dependencies.wry]
path = "../../vendor/wry"
default-features = false
features = ["devtools", "transparent", "protocol", "drag-drop", "os-webview", "x11"]

[features]
default = []
devtools = ["wry/devtools"]
macos-private-api = ["wry/fullscreen", "wry/transparent"]
macos-proxy = ["wry/mac-proxy"]
# Enable when using local patched tao with velox-testing feature
local-dev = []

[profile.release]
lto = true
opt-level = "s"
